[gd_scene load_steps=5 format=2]

[ext_resource path="res://models/pieces/green_spatialmaterial.tres" type="Material" id=1]
[ext_resource path="res://models/pieces/piece.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.663483, 0.581496, 0.569554 )

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 1, 0.336561 )

[node name="RightBottomPiece" type="KinematicBody"]
collision_layer = 2
script = ExtResource( 2 )
original_material = ExtResource( 1 )

[node name="CSGCombiner" type="CSGCombiner" parent="."]

[node name="CSGBox" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.25, 0, 0, 0 )
material = ExtResource( 1 )

[node name="CSGSphere" type="CSGSphere" parent="CSGCombiner/CSGBox"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.7, -1.025, 0, 0 )
material = ExtResource( 1 )

[node name="CSGSphere2" type="CSGSphere" parent="CSGCombiner/CSGBox"]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.7, 0, 1.025, 0 )
material = ExtResource( 1 )

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 2 )
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
